--- a/MobileGame-task1.ipynb
+++ b/MobileGame-task1.ipynb
@@ -56,7 +56,6 @@
     "\n",
     "import time\n",
     "import datetime\n",
-    "#from datetime import date\n",
     "\n",
     "import requests \n",
     "from urllib.parse import urlencode"
@@ -463,8 +462,8 @@
    ],
    "source": [
     "# приведем столбцы с таймштампами к читаемому виду и запишем в новые столбцы\n",
-    "df['auth_date']  = pd.to_datetime(df['auth_ts'], unit='s').dt.date\n",
-    "df['reg_date']   = pd.to_datetime(df['reg_ts'], unit='s').dt.date\n",
+    "df['auth_date'] = pd.to_datetime(df['auth_ts'], unit='s').dt.date\n",
+    "df['reg_date'] = pd.to_datetime(df['reg_ts'], unit='s').dt.date\n",
     "df.head(3)"
    ]
   },
@@ -487,9 +486,9 @@
    ],
    "source": [
     "# посмотрим диапазон дат в наших данных\n",
-    "print('Первая регистрация   : ', df['reg_date'].min() )\n",
+    "print('Первая регистрация   : ', df['reg_date'].min())\n",
     "print('Первая авторизация   : ', df['auth_date'].min())\n",
-    "print('Последняя регистрация: ', df['reg_date'].max() )\n",
+    "print('Последняя регистрация: ', df['reg_date'].max())\n",
     "print('Последняя авторизация: ', df['auth_date'].max())"
    ]
   },
@@ -508,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Задаём период анализа:\n",
+    "# Задаём период анализа\n",
     "start_date = datetime.date(2018, 1, 1)\n",
     "end_date = datetime.date(2018, 1, 31)"
    ]
@@ -520,9 +519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# добавим столбец с количеством ДНЕЙ с момента регистрации\n",
-    "#df['days_since_reg'] = (df['auth_date'] - df['reg_date']).dt.days\n",
-    "df['days_since_reg'] = ((df.auth_date - df.reg_date)/np.timedelta64(1, 'D')).astype(int)"
+    "# Добавим столбец с количеством ДНЕЙ с момента регистрации\n",
+    "df['days_since_reg'] = ((df.auth_date - df.reg_date) / np.timedelta64(1, 'D')).astype(int)"
    ]
   },
   {
@@ -772,9 +770,9 @@
    ],
    "source": [
     "# Создадим таблицу для когортного анализа, когорты делим по дате регистрации\n",
-    "cohorts = df_filtred.groupby(['reg_date','days_since_reg'], as_index=False)\\\n",
-    "          .agg({'uid':'nunique'})\\\n",
-    "          .pivot(index='reg_date', columns='days_since_reg', values='uid')\n",
+    "cohorts = df_filtred.groupby(['reg_date', 'days_since_reg'], as_index=False)\\\n",
+    "    .agg({'uid': 'nunique'})\\\n",
+    "    .pivot(index='reg_date', columns='days_since_reg', values='uid')\n",
     "cohorts.head()"
    ]
   },
@@ -1020,7 +1018,7 @@
     }
    ],
    "source": [
-    "#теперь найдем показатель retention для наших данных относительно даты регистрации\n",
+    "# Теперь найдем показатель retention для наших данных относительно даты регистрации\n",
     "cohorts.div(cohorts[0], axis=0).head()"
    ]
   },
@@ -1046,7 +1044,7 @@
     }
    ],
    "source": [
-    "# и наконец построим красивую и понятную визуализацию для наших данных\n",
+    "# ...и наконец построим красивую и понятную визуализацию для наших данных\n",
     "plt.figure(figsize=(30, 30))\n",
     "plt.title('% возврата игроков с момента регистрации', fontweight='bold', size=30)\n",
     "sns.heatmap(cohorts.div(cohorts[0], axis=0), vmin=0.0, vmax=0.1, cmap='viridis', \n",
@@ -1093,8 +1091,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# добавим столбец с количеством МЕСЯЦЕВ с момента регистрации\n",
-    "df['months_since_reg'] = ((df.auth_date - df.reg_date)/np.timedelta64(1, 'M')).astype(int)"
+    "# Добавим столбец с количеством МЕСЯЦЕВ с момента регистрации\n",
+    "df['months_since_reg'] = ((df.auth_date - df.reg_date) / np.timedelta64(1, 'M')).astype(int)"
    ]
   },
   {
@@ -1112,7 +1110,7 @@
     }
    ],
    "source": [
-    "# отфилтруем данные за необходимый период\n",
+    "# Отфильтруем данные за необходимый период\n",
     "df_filtred = df.query('reg_date >= @start_date and auth_date <= @end_date')\n",
     "print(df_filtred.size)"
    ]
@@ -1396,9 +1394,9 @@
     }
    ],
    "source": [
-    "cohorts_month = df_filtred.groupby(['reg_month','months_since_reg'], as_index=False)\\\n",
-    "          .agg({'uid':'nunique'})\\\n",
-    "          .pivot(index='reg_month', columns='months_since_reg', values='uid')\n",
+    "cohorts_month = df_filtred.groupby(['reg_month', 'months_since_reg'], as_index=False)\\\n",
+    "    .agg({'uid': 'nunique'})\\\n",
+    "    .pivot(index='reg_month', columns='months_since_reg', values='uid')\n",
     "cohorts_month"
    ]
   },
@@ -1681,7 +1679,7 @@
     }
    ],
    "source": [
-    "#найдем показатель retention для наших данных относительно даты регистрации\n",
+    "# Найдем показатель retention для наших данных относительно даты регистрации\n",
     "cohorts_month.div(cohorts_month[0], axis=0)"
    ]
   },
@@ -1729,8 +1727,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# всё тоже самое по годам\n",
-    "df['reg_year']  = pd.to_datetime(df['reg_ts'], unit='s').dt.year"
+    "# Всё тоже самое по годам\n",
+    "df['reg_year'] = pd.to_datetime(df['reg_ts'], unit='s').dt.year"
    ]
   },
   {
@@ -1740,7 +1738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['years_since_reg'] = ((df.auth_date - df.reg_date)/np.timedelta64(1, 'Y')).astype(int)"
+    "df['years_since_reg'] = ((df.auth_date - df.reg_date) / np.timedelta64(1, 'Y')).astype(int)"
    ]
   },
   {
@@ -2463,9 +2461,9 @@
     }
    ],
    "source": [
-    "cohorts_years = df.groupby(['reg_year','years_since_reg'], as_index=False)\\\n",
-    "          .agg({'uid':'nunique'})\\\n",
-    "          .pivot(index='reg_year', columns='years_since_reg', values='uid')\n",
+    "cohorts_years = df.groupby(['reg_year', 'years_since_reg'], as_index=False)\\\n",
+    "    .agg({'uid': 'nunique'})\\\n",
+    "    .pivot(index='reg_year', columns='years_since_reg', values='uid')\n",
     "cohorts_years"
    ]
   },
@@ -2534,11 +2532,11 @@
     }
    ],
    "source": [
-    "retention_plot = df_filtred.groupby(['reg_month', 'days_since_reg'], as_index=False).agg({'uid':'nunique'})\n",
-    "sns.set(rc={'figure.figsize':(16,8)})\n",
+    "retention_plot = df_filtred.groupby(['reg_month', 'days_since_reg'], as_index=False).agg({'uid': 'nunique'})\n",
+    "sns.set(rc={'figure.figsize': (16, 8)})\n",
     "sns.lineplot(data=retention_plot, x='days_since_reg', y='uid', hue='reg_month')\n",
-    "#plt.xlim(1,)\n",
-    "plt.ylim(0,1000)\n",
+    "# plt.xlim(1,)\n",
+    "plt.ylim(0, 1000)\n",
     "None"
    ]
   },
@@ -2563,11 +2561,11 @@
    ],
    "source": [
     "# Еще один тест\n",
-    "retention_plot = df.groupby(['reg_year', 'days_since_reg'], as_index=False).agg({'uid':'nunique'})\n",
-    "sns.set(rc={'figure.figsize':(16,8)})\n",
+    "retention_plot = df.groupby(['reg_year', 'days_since_reg'], as_index=False).agg({'uid': 'nunique'})\n",
+    "sns.set(rc={'figure.figsize': (16, 8)})\n",
     "sns.lineplot(data=retention_plot, x='days_since_reg', y='uid', hue='reg_year')\n",
-    "#plt.xlim(1,4000)\n",
-    "plt.ylim(0,2500)\n",
+    "# plt.xlim(1, 4000)\n",
+    "plt.ylim(0, 2500)\n",
     "None"
    ]
   },
@@ -2619,14 +2617,14 @@
     "        .query('reg_ts >= @start_date and auth_ts <= @end_date')\n",
     "\n",
     "    df['auth_date'] = pd.to_datetime(df['auth_ts'], unit='s').dt.date\n",
-    "    df['reg_date' ] = pd.to_datetime(df['reg_ts' ], unit='s').dt.date\n",
+    "    df['reg_date'] = pd.to_datetime(df['reg_ts'], unit='s').dt.date\n",
     "\n",
-    "    df['period'] = ((df.auth_date - df.reg_date)/np.timedelta64(1, period)).astype(int)\n",
-    "    df['start' ] = pd.to_datetime(df['reg_ts'], unit='s').dt.to_period(period)\n",
+    "    df['period'] = ((df.auth_date - df.reg_date) / np.timedelta64(1, period)).astype(int)\n",
+    "    df['start'] = pd.to_datetime(df['reg_ts'], unit='s').dt.to_period(period)\n",
     "    \n",
-    "    cohorts = df.groupby(['start','period'], as_index=False)\\\n",
-    "          .agg({'uid':'nunique'})\\\n",
-    "          .pivot(index='start', columns='period', values='uid')\n",
+    "    cohorts = df.groupby(['start', 'period'], as_index=False)\\\n",
+    "        .agg({'uid': 'nunique'})\\\n",
+    "        .pivot(index='start', columns='period', values='uid')\n",
     "    \n",
     "    if style == 'heatmap':\n",
     "        plt.figure(figsize=(30, 30))\n",
@@ -2638,11 +2636,10 @@
     "        return 'Heatmap'\n",
     "    \n",
     "    elif style == 'lineplot':\n",
-    "        retention_plot = df.groupby(['start', 'period'], as_index=False).agg({'uid':'nunique'})\n",
-    "        sns.set(rc={'figure.figsize':(16,8)})\n",
+    "        retention_plot = df.groupby(['start', 'period'], as_index=False).agg({'uid': 'nunique'})\n",
+    "        sns.set(rc={'figure.figsize': (16, 8)})\n",
     "        sns.lineplot(data=retention_plot, x='period', y='uid', hue='start')\n",
-    "        #plt.xlim(1,) - будет доработано в следующей версии\n",
-    "        plt.ylim(0,1000)\n",
+    "        plt.ylim(0, 1000)\n",
     "        return 'Lineplot'\n",
     "    \n",
     "    elif style == 'table':\n",
